--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
-      <a href="/" class="btn">Home</a>
+      <a href="/eviannerovers/" class="btn">Home</a>
       <a href="/eviannerovers/about/" class="btn">About</a>
       <a href="/eviannerovers/cv/" class="btn">CV</a>
       <a href="/eviannerovers/publications/" class="btn">Publications</a>
