--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     {% include head-custom.html %}
   </head>
   <body>
+    <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
