--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,10 @@
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
       <a href="/eviannerovers/" class="btn">Home</a>
-      <a href="/eviannerovers/about/" class="btn">About</a>
       <a href="/eviannerovers/cv/" class="btn">CV</a>
       <a href="/eviannerovers/publications/" class="btn">Publications</a>
       <a href="/eviannerovers/projects/" class="btn">GitHub Repos</a>
+      <a href="/eviannerovers/contact/" class="btn">Contact me</a>
     </section>
     
     <main id="content" class="main-content" role="main">
