--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
 
       <a href="/eviannerovers/" class="btn">About me</a>
       <a href="/eviannerovers/cv/" class="btn">CV</a>
+      <a href="/eviannerovers/phdthesis/" class="btn">PhD Thesis</a>
       <a href="/eviannerovers/publications/" class="btn">Publications</a>
       <a href="/eviannerovers/projects/" class="btn">GitHub Repos</a>
       <a href="/eviannerovers/contact/" class="btn">Contact me</a>
