--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,14 +14,12 @@
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
-
+    
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      <div class="header-image">
-        <img src="{{ '/header-image.jpg' | relative_url }}" alt="Header Image" style="width: 100%; max-height: 300px; object-fit: cover;">
-      </div>
-
+      <img src="{{ 'header-image.jpg' | relative_url }}" alt="Header Image" class="corner-image">
+      
       <a href="/eviannerovers/" class="btn">About me</a>
       <a href="/eviannerovers/cv/" class="btn">CV</a>
       <a href="/eviannerovers/phdthesis/" class="btn">PhD Thesis</a>
