--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
     
-    <section class="page-header">
+    <section class="page-header" style="position: relative;">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       <img src="{{ 'header-image.jpg' | relative_url }}" alt="Header Image" style="position: absolute; top: 1rem; right: 1rem; width: 80px; height: auto; box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);">
