--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,8 @@
     <section class="page-header" style="position: relative;">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      <img src="{{ 'header-image.jpg' | relative_url }}" alt="Header Image" style="position: absolute; top: 1rem; right: 1rem; width: 80px; height: auto; box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);">
+      <img src="{{ 'header-image.jpg' | relative_url }}" alt="Header Image" style="position: absolute; top: 1rem; right: 1rem; width: 80px; height: auto;
+              border-radius: 50%; box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);">
       
       <a href="/eviannerovers/" class="btn">About me</a>
       <a href="/eviannerovers/cv/" class="btn">CV</a>
