--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       
       <div class="header-wrapper">
-        <img src="{{ 'header-image.jpg' | relative_url }}" alt="Header Image" class="header-image">
+        <img src="{{ '6BOY.jpg' | relative_url }}" alt="Header Image" class="header-image">
       </div>
       
       <a href="/eviannerovers/" class="btn">About me</a>
