--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,11 +43,14 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
     
     <section class="page-header" style="position: relative;">
-      <div class="header-wrapper">
+    <div class="header-wrapper">
+      <img src="{{ '6BOY.png' | relative_url }}" alt="Header Image" class="header-image">
+
+      <div class="header-text">
         <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
         <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-        <img src="{{ '6BOY.png' | relative_url }}" alt="Header Image" class="header-image">
       </div>
+    </div>
       
       <a href="/eviannerovers/" class="btn">About me</a>
       <a href="/eviannerovers/cv/" class="btn">CV</a>
