--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@
 .header-image-absolute {
   position: absolute;
   top: 5rem;
-  right: 15rem; /* or left: 1rem; to move it to the left */
-  width: 400px;
+  right: 15rem; 
+  width: 200px;
   height: auto;
 }
 
