--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
         <img src="{{ '6BOY.png' | relative_url }}" alt="Header Image" class="header-image">
       </div>
     </section>
-    <div class="header-buttons">
+    <div class="header-buttons" style="text-align: center; margin-bottom: 1rem;">
           <a href="/eviannerovers/" class="btn">About me</a>
           <a href="/eviannerovers/cv/" class="btn">CV</a>
           <a href="/eviannerovers/phdthesis/" class="btn">PhD Thesis</a>
