--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
   grid-template-columns: 120px auto 120px;
   align-items: center;
   padding: 1rem 0;
+  box-sizing: border-box; 
 }
 
 .header-content {
@@ -29,6 +30,7 @@
   grid-column: 3;
   width: 120px;
   height: auto;
+  padding: 50px;
 }
 
 .header-ghost {
