--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 <style>
 .page-header {
   display: grid;
-  grid-template-columns: 120px auto 120px;
+  grid-template-columns: 220px auto 220px;
   align-items: center;
   padding: 1rem 0;
   box-sizing: border-box; 
@@ -38,6 +38,7 @@
   width: 120px;
   height: 120px;
   visibility: hidden; 
+  padding: 50px;
 }
 
 .header-buttons {
