--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,9 @@
     right: 1rem;
   }
   .header-buttons {
-    gap: 0.3rem; 
-    margin-top: 0.3rem;
+    gap: 0rem; 
+    margin-top: 0rem;
+    margin-bottom: 0rem;
   }
 }
 </style>
