--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,10 @@
     margin-top: 0rem;
     margin-bottom: 0rem;
   }
+  .header-buttons .btn {
+  margin: 0;
+  padding: 0.3rem 0.6rem;
+  }
 }
 </style>
   </head>
