--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 .page-header {
   margin-bottom: 0;    
   padding-bottom: 1rem; 
+  padding-top: 1.5rem; 
 }
 .header-text {
   text-align: center;
